2021-08-26  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r281616.
        https://bugs.webkit.org/show_bug.cgi?id=229570

        It is crashing in iOS Debug

        Reverted changeset:

        "Signaling state check when applying a local or remote
        description is no longer aligned with the WebRTC spec"
        https://bugs.webkit.org/show_bug.cgi?id=229138
        https://commits.webkit.org/r281616

2021-08-26  Enrique Ocaña González  <eocanha@igalia.com>

        [GStreamer][MSE] Implement the "sequence" mode in SourceBuffer for the GStreamer ports
        https://bugs.webkit.org/show_bug.cgi?id=210341

        Reviewed by Alicia Boya Garcia.

        * web-platform-tests/media-source/mediasource-sourcebuffer-mode-timestamps-expected.txt: Added extra blank line in expectations, like in many other expectations files.

2021-08-26  Youenn Fablet  <youenn@apple.com>

        Signaling state check when applying a local or remote description is no longer aligned with the WebRTC spec
        https://bugs.webkit.org/show_bug.cgi?id=229138

        Reviewed by Eric Carlson.

        Rebasing tests.
        Some tests are going from PASS to FAIL:
        - LayoutTests/imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-operations.https.html: we do not support yet rollback.
        - LayoutTests/imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-setLocalDescription-pranswer.html:  is no longer throwing the right exception (and we are not supporting pranswer yet).
        - LayoutTests/imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-setRemoteDescription.html: we are throwing with a different exception.

        * web-platform-tests/webrtc/RTCPeerConnection-SLD-SRD-timing.https-expected.txt:
        * web-platform-tests/webrtc/RTCPeerConnection-operations.https-expected.txt:
        * web-platform-tests/webrtc/RTCPeerConnection-perfect-negotiation-stress-glare-linear.https-expected.txt: