@@ -1,3 +1,15 @@
+2021-08-26  Alan Bujtas  <zalan@apple.com>
+
+        REGRESSION(r275754): Using MarkOnlyThis to make the preferred width dirty introduces unexpected state
+        https://bugs.webkit.org/show_bug.cgi?id=229586
+        <rdar://82141454>
+
+        Unreviewed revert of r275754.
+
+        * web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-002-expected.txt:
+        * web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-vertical-lr-002-expected.txt:
+        * web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-vertical-rl-002-expected.txt:
+
 2021-08-26  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, reverting r281616.
